Fix crash in rename dialog

ResizePanels must only be called in case of overwrite, all other cases violate
the preconditions.

BUG: 360488
REVIEW: 127410